--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body{
   margin-left: auto;
   margin-right:auto;
   padding:15px;
+  -webkit-box-shadow: 0px 2px 2px #888;
 }
 #placement{
   padding:10px;
@@ -35,6 +36,7 @@ body{
   text-align: center;
   padding:15px;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 2px 2px #888;
 }
 .link{
   margin-right:20px;
@@ -51,6 +53,7 @@ body{
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   padding:15px;
+  -webkit-box-shadow: 0px 2px 2px #888;
 }
 
 img{
