--- a/main.css
+++ b/main.css
@@ -35,7 +35,8 @@ body{
   margin-right:auto;
   text-align: center;
   padding:15px;
-  border-radius: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   -webkit-box-shadow: 0px 2px 2px #888;
 }
 .link{
