--- a/main.css
+++ b/main.css
@@ -39,7 +39,15 @@ img {
 #reveal {
     display: none;
 }
-@media only screen and (max-width: 1175px) {
+@media only screen and (min-width: 990px) {
+    #hide_nav{
+        display: none;
+    }
+    #reveal_nav{
+        display: block;
+    }
+}
+@media only screen and (max-width: 990px) {
     #hide{
         display: none;
     }
@@ -47,6 +55,7 @@ img {
         display: block;
     }
 }
+
 #content{
     margin-left: 30px;
     margin-right: 30px;
